# eops

./: .gitignore  gp.py  output.txt  pyproject.toml  sma_final_report.html  sma_report.html  sma_report_v2.html
data/: okx_BTC-USDT-SWAP_1h.csv
eops/: cli.py  requirements.txt
eops/core/: backtester.py  engine.py  strategy.py
eops/utils/: config_loader.py
