[project]
name = "eops"
version = "0.1.0"
description = "a quant package for Eops"
authors = [
    {name = "ops"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "typer[all] (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eops = "eops.cli:main_app"